added collapse funtionality to table title

--- a/local-server/src/main/assets/app.css
+++ b/local-server/src/main/assets/app.css
@@ -1,110 +1,121 @@
-
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-
-details[open] summary
-{
-font-weight: bold;
+.details[open] summary {
+    font-weight: bold;
 }
 
-details > summary {
+details>summary {
     list-style-type: none;
-    padding-top : 6px;
+    padding-top: 6px;
+    font-size: 15px;
 }
 
-details > summary::-webkit-details-marker {
+details>summary::-webkit-details-marker {
     display: none;
 }
 
-details > summary::before {
-
-        padding-right: 10px;
-           content: "\f0d7";
-           font-family: FontAwesome;
-}
-
-details[open] > summary::before {
-    content: '\f0d8';
+details>summary::before {
+    padding-right: 10px;
+    content: "\f0da";
     font-family: FontAwesome;
 }
 
+details[open]>summary::before {
+    content: '\f0d7';
+    font-family: FontAwesome;
+}
 
-.table-borderless > tbody > tr > td,
-.table-borderless > tbody > tr > th,
-.table-borderless > tfoot > tr > td,
-.table-borderless > tfoot > tr > th,
-.table-borderless > thead > tr > td,
-.table-borderless > thead > tr > th {
-
-    padding-left : 16px;
-    border-block-color : #5b5b5bd6 ;
+.table-borderless>tbody>tr>td,
+.table-borderless>tbody>tr>th,
+.table-borderless>tfoot>tr>td,
+.table-borderless>tfoot>tr>th,
+.table-borderless>thead>tr>td,
+.table-borderless>thead>tr>th {
+    padding-left: 16px;
+    border-block-color: #5b5b5bd6;
 }
 
 .table-borderless {
     table-layout: fixed;
-     over-flow: break-word;
-     border-radius: 8px;
-     padding : 8px;
+    over-flow: break-word;
+    border-radius: 8px;
+    padding: 8px;
 }
-.table-borderless{
-   max-width : 95%;
+
+.table-borderless {
+    max-width: 95%;
 }
 
 .my-custom-scrollbar {
-position: relative;
-overflow: scroll;
-
+    overflow-y: scroll;
 }
+
+.log_cat_div {
+    position: relative;
+    height: 500px;
+    padding-left: 28px;
+    padding-top: 18px;
+    border-radius: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #383737;
+}
+
 .table-wrapper-scroll-y {
-display: block;
-
+    display: block;
 }
-#log_cat_div{
+
+.my-custom-scrollbar {
     height: 600px;
     padding: 4px;
-    padding-left : 28px;
-    padding-top : 18px;
+    padding-left: 28px;
+    padding-top: 18px;
     border-radius: 10px;
-    margin : 10px;
-background-color:#383737;
+    margin: 10px;
+    background-color: #383737;
 }
 
-th{
- font-size : 26px;
- padding-top : 10px;
- padding-left : 30px;
-}
-h1{
-padding-left : 16px;
-padding-bottom : 8px;
+.title_summary {
+    font-size: 24px;
+    padding-bottom: 8px;
 }
 
-   body {
-  color: white;
-  background-color:#2f2f2f;
-}
-tbody{
-  background-color:#383737;
+th {
+    font-size: 26px;
+    padding-top: 10px;
+    padding-left: 30px;
 }
 
-.table_div{
-padding-left : 25px;
-border-radius: 10px;
-background-color:#3a3939d4;
-margin : 10px;
+h1 {
+    padding-left: 16px;
+    padding-bottom: 8px;
 }
-.inner-table-body{
+
+body {
+    color: white;
+    background-color: #2f2f2f;
+}
+
+tbody {
+    background-color: #383737;
+}
+
+.table_div {
+    padding-left: 25px;
+    border-radius: 10px;
+    background-color: #3a3939d4;
+    margin: 10px;
+}
+
+.inner-table-body {
     background-color: #383737ed;
-
 }
 
-.no_data_div{
-width:100%;
-text-align: center;
-padding: 40px 0;
-font-size : 26px;
+.no_data_div {
+    width: 100%;
+    text-align: center;
+    padding: 35px 0;
+    font-size: 26px;
 }
