--- a/local-server/src/main/assets/app.css
+++ b/local-server/src/main/assets/app.css
@@ -129,8 +129,9 @@ tbody {
 
 .secondary_graph_div {
     height: 260px;
-    width: 95%;
-    padding: 10px;
+    width: 97%;
+    padding-top: 10px;
+    padding-left: 4px;
     margin-right: 6px;
     margin-bottom: 10px;
     border-radius: 6px;
